--- a/Calculator.Logic.UnitTests/Calculator.Logic.UnitTests.csproj
+++ b/Calculator.Logic.UnitTests/Calculator.Logic.UnitTests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvaluatorTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
