--- a/MapManager.UnitTests/MapManager.UnitTests.csproj
+++ b/MapManager.UnitTests/MapManager.UnitTests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetFactoryTests.cs" />
     <Compile Include="RendererTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
